[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Themes/Upgrades.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Upgrades.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Styles/UpStyleBox.stylebox" type="StyleBox" id=3]

[sub_resource type="StyleBoxFlat" id=1]

bg_color = Color( 0.921569, 0.0862745, 0.0862745, 1 )

[node name="Upgrades" type="Panel"]
pause_mode = 2
margin_right = 1023.0
margin_bottom = 576.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 25.6719, 2.59556 )
custom_styles/panel = ExtResource( 3 )
custom_styles/panelnc = SubResource( 1 )

[node name="CurrentPoints" type="Label" parent="."]
margin_left = 50.0
margin_top = 20.0
margin_right = 477.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Current Points: xxxxxx"

[node name="TotalPoints" type="Label" parent="."]
margin_left = 500.0
margin_top = 20.0
margin_right = 885.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0.372549, 0.0392157, 0.0392157, 1 )
text = "Total Points: xxxxxx"

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -310.0
margin_top = -130.0
margin_right = 310.0
margin_bottom = 130.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 3

[node name="GunButton" type="Button" parent="GridContainer"]
pause_mode = 2
margin_right = 365.0
margin_bottom = 56.0
custom_constants/hseparation = 50
disabled = true
text = "Upgrade Attack"

[node name="GunLevel" type="Label" parent="GridContainer"]
margin_left = 385.0
margin_right = 474.0
margin_bottom = 56.0
text = "Lv. 1"

[node name="GunPrice" type="Label" parent="GridContainer"]
margin_left = 494.0
margin_right = 614.0
margin_bottom = 56.0
text = "$5000"

[node name="FortButton" type="Button" parent="GridContainer"]
pause_mode = 2
margin_top = 66.0
margin_right = 365.0
margin_bottom = 122.0
disabled = true
text = "Upgrade Fort"

[node name="FortLevel" type="Label" parent="GridContainer"]
margin_left = 385.0
margin_top = 66.0
margin_right = 474.0
margin_bottom = 122.0
text = "Lv. 1"

[node name="FortPrice" type="Label" parent="GridContainer"]
margin_left = 494.0
margin_top = 66.0
margin_right = 614.0
margin_bottom = 122.0
text = "$5000"

[node name="FRButton" type="Button" parent="GridContainer"]
pause_mode = 2
margin_top = 132.0
margin_right = 365.0
margin_bottom = 188.0
disabled = true
text = " Upgrade Fire Rate "

[node name="FRLevel" type="Label" parent="GridContainer"]
margin_left = 385.0
margin_top = 132.0
margin_right = 474.0
margin_bottom = 188.0
text = "Lv. 1"

[node name="FRPrice" type="Label" parent="GridContainer"]
margin_left = 494.0
margin_top = 132.0
margin_right = 614.0
margin_bottom = 188.0
text = "$5000"

[node name="BarrierButton" type="Button" parent="GridContainer"]
pause_mode = 2
margin_top = 198.0
margin_right = 365.0
margin_bottom = 254.0
disabled = true
text = "Buy Barrier"

[node name="BarrierNum" type="Label" parent="GridContainer"]
margin_left = 385.0
margin_top = 198.0
margin_right = 474.0
margin_bottom = 254.0
text = "0"

[node name="BarrierPrice" type="Label" parent="GridContainer"]
margin_left = 494.0
margin_top = 198.0
margin_right = 614.0
margin_bottom = 254.0
text = "$5000"

[node name="Refund" type="Button" parent="."]
pause_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -58.7
margin_right = 260.0
custom_constants/hseparation = 20
disabled = true
text = "Refund"

[node name="Return" type="Button" parent="."]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -56.0
disabled = true
text = "Done"

[connection signal="pressed" from="GridContainer/GunButton" to="." method="_on_GunButton_pressed"]
[connection signal="pressed" from="GridContainer/FortButton" to="." method="_on_FortButton_pressed"]
[connection signal="pressed" from="GridContainer/FRButton" to="." method="_on_FRButton_pressed"]
[connection signal="pressed" from="GridContainer/BarrierButton" to="." method="_on_BarrierButton_pressed"]
[connection signal="pressed" from="Refund" to="." method="_on_Refund_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
